# visible-browser-lab

./: .gitignore  .mcp.json  .oxfmtrc.json  .oxlintrc.json  .taplo.toml  Cargo.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.codex/: config.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml  tests.yml
THIRD_PARTY_LICENSES/: v8-heap-parser.txt
agent-surface-contract/: Cargo.toml
agent-surface-contract/src/: lib.rs
agent-surface-eval/: Cargo.toml
agent-surface-eval/plugin/: .mcp.json
agent-surface-eval/plugin/.codex-plugin/: plugin.json
agent-surface-eval/plugin/skills/visible-browser-lab/: SKILL.md
agent-surface-eval/src/: catalog.rs  fixtures.rs  lib.rs  main.rs  scoring.rs  server.rs
docs/: RELEASING.md
docs/rfcs/evidence/00004-installed-runtime/: 2026-06-24-chromiumoxide-spike.md
docs/rfcs/evidence/00005-agent-interaction-surface/: 2026-06-28-non-intrusive-interaction-recon.md  2026-06-28-non-intrusive-interaction-results.json  agent-evaluation-summary.json  agent-evaluation-summary.md  analyzer-feasibility.md  capability-matrix.md  catalog-measurement.json
docs/rfcs/stage-0/: 00002-visible-browser-lab-plugin-publishing.md  00006-visible-browser-lab-binary-resolved-host-packages.md  00011-conversation-scoped-session-identity.md
docs/rfcs/stage-1/: 00001-visible-browser-lab-tab-isolation.md  00002-visible-browser-lab-plugin-publishing.md  00003-visible-browser-lab-headless-property-tests.md  00005-visible-browser-lab-agent-interaction-surface.md  00007-broker-lifecycle-self-ownership.md  00009-session-lease-expiry.md  00010-stewardship-by-construction.md  00012-ownership-aware-browser-cleanup.md  00013-durable-streaming-screencasts.md
docs/rfcs/stage-2/: 00001-visible-browser-lab-tab-isolation.md  00002-visible-browser-lab-plugin-publishing.md  00003-visible-browser-lab-headless-property-tests.md  00004-visible-browser-lab-installed-runtime.md  00005-visible-browser-lab-agent-interaction-surface.md  00006-visible-browser-lab-vscode-language-model-tools.md  00007-broker-lifecycle-self-ownership.md  00009-session-lease-expiry.md  00011-conversation-scoped-session-identity.md
docs/rfcs/stage-3/: 00001-visible-browser-lab-tab-isolation.md  00002-visible-browser-lab-plugin-publishing.md  00003-visible-browser-lab-headless-property-tests.md  00004-visible-browser-lab-installed-runtime.md  00005-visible-browser-lab-agent-interaction-surface.md  00006-visible-browser-lab-vscode-language-model-tools.md
proptest-regressions/: headless_mcp.txt
scripts/: start-visible-browser.sh  visible-browser-lab-mcp.sh
skills/visible-browser-lab/: SKILL.md
spikes/chromiumoxide/: Cargo.toml  README.md
spikes/chromiumoxide-core/: Cargo.toml
spikes/chromiumoxide-core/src/: main.rs
spikes/chromiumoxide/src/: main.rs
src/: artifacts.rs  broker.rs  cdp.rs  chrome.rs  config.rs  conversation_identity.rs  heap.rs  ipc.rs  leases.rs  lib.rs  main.rs  managed_chrome.rs  mcp.rs  protocol.rs  semantic.rs  surface.rs  surface_cli.rs  video.rs
test-support/: Cargo.toml
test-support/src/: lib.rs
tests/: headless_mcp.rs  managed_runtime.rs
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: confirmation.ts  extension.ts  invocation_context.ts  model_result.ts
vscode-extension/test/: runner.ts  suite.ts  tsconfig.json
vscode-extension/unit/: confirmation.test.ts  invocation_context.test.ts  model_result.test.ts  tsconfig.json
xtask/: Cargo.toml
xtask/src/: agent_eval.rs  main.rs
