[workspace]
members = [".", "agent-surface-eval", "test-support", "xtask"]
exclude = ["spikes/chromiumoxide", "spikes/chromiumoxide-core"]
resolver = "3"

[package]
name = "visible-browser-lab"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "visible-browser-lab-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
chromiumoxide = { version = "=0.9.1", default-features = false }
directories = "6.0"
fs2 = "0.4"
futures-util = "0.3"
interprocess = { version = "2.4.2", features = ["tokio"] }
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rmcp = { version = "1.7.0", features = ["transport-io"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3.23"
visible-browser-lab-test-support = { path = "test-support" }
proptest = "1"
proptest-state-machine = "0.8"
