[workspace]
members = [
    ".",
    "agent-surface-contract",
    "agent-surface-eval",
    "test-support",
    "xtask",
]
exclude = ["spikes/chromiumoxide", "spikes/chromiumoxide-core"]
resolver = "3"

[package]
name = "visible-browser-lab"
version = "0.4.11"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "visible-browser-lab-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
agent-surface-contract = { path = "agent-surface-contract" }
async-tungstenite = { version = "0.32.1", default-features = false, features = [
    "tokio-runtime",
] }
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
chromiumoxide = { version = "=0.9.1", default-features = false }
directories = "6.0"
fs2 = "0.4"
futures-util = "0.3"
interprocess = { version = "2.4.2", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
libc = "0.2"
petgraph = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
regex = "1.11"
rmcp = { version = "1.7.0", features = ["transport-io"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSRunningApplication",
    "libc",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["test-util"] }
visible-browser-lab-test-support = { path = "test-support" }
proptest = "1"
proptest-state-machine = "0.8"
