[package]
name = "agent-surface-eval"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "visible-browser-lab-eval-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
rmcp = { version = "1.7.0", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.11.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3.23"
