[package]
name = "visible-browser-lab-test-support"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[dependencies]
anyhow = "1.0"
chrome-for-testing-manager = { version = "0.12", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
serde_json = "1.0"
tempfile = "3.23"
tokio = { version = "1.48", features = ["rt", "time"] }
