[package]
name = "visible-browser-lab-chromiumoxide-spike"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chromiumoxide = { version = "0.9.1", default-features = false }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
visible-browser-lab-test-support = { path = "../../test-support" }
